<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/factoryline"
                android:padding="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/worker"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/worker"
        android:contentDescription="@string/worker"/>

    <ImageView
        android:id="@+id/factory_line_box"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:src="@drawable/factorylinebox"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/factory_box"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/work_profits"/>

    <ImageView
        android:id="@+id/manager"
        android:layout_width="58dp"
        android:scaleType="centerCrop"
        android:layout_height="128dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:src="@drawable/manager"
        android:contentDescription="@string/manager"/>

    <Button
        android:id="@+id/factory_line_open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/open"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/factory_line_upgrade_button"
        android:layout_centerHorizontal="true"
        android:text="@string/upgrade"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:layout_width="100dp"
        android:id="@+id/working_progress"
        android:visibility="gone"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleHorizontal"
        android:layout_centerInParent="true"/>

</RelativeLayout>